Corrected overflow of charts.

--- a/Dublin_Bikes/static/css/style.css
+++ b/Dublin_Bikes/static/css/style.css
@@ -91,7 +91,7 @@ p.copyright {
 }
 
 .chartsContainer {
-    height: 400px;
+    height: 435px;
     width: 100%;
     display: none;
     margin: 0;
